operators/eck/base/operator.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-operator
  namespace: elastic-system
spec:
  serviceName: elastic-operator
  replicas: 1
  selector:
    matchLabels:
      control-plane: elastic-operator
  template:
    metadata:
      labels:
        control-plane: elastic-operator
    spec:
      serviceAccountName: elastic-operator
      containers:
        - name: manager
          image: docker.elastic.co/eck/eck-operator:2.13.0
          args:
            - manager
            - --operator-namespace=elastic-system
